<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    >



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:padding="8dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:contentDescription="@string/back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/ic_back"
                    android:id="@+id/imageView2"
                    android:layout_gravity="center_vertical"
                    android:tint="#ffffff"
                    android:onClick="_back_onClick" />

                <include layout="@layout/logo"/>

                <TextView
                    android:text="@string/menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/_list_name"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:fontFamily="sans-serif"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

        </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <Button
            android:text="@string/delete_all_lists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="_delete_all_onClick" />


        <Button
            android:text="@string/inspect_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inspect_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="_inspect_database_onClick" />

        <Button
            android:text="@string/reset_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="_reset_database_onClick" />

        <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="_save_database_onClick" />

        <Button
            android:text="@string/load_test_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/load_test_data_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="_load_test_db_onClick" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>




