<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    >



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:padding="8dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:contentDescription="@string/back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/ic_back"
                    android:id="@+id/imageView2"
                    android:layout_gravity="center_vertical"
                    android:tint="#ffffff"
                    android:onClick="_back_onClick"/>

                <include layout="@layout/logo"/>

                <EditText
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/_list_name"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:fontFamily="sans-serif"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:labelFor="@+id/_list_name"
                    android:inputType="text"
                    android:layout_weight="1"/>
                <ImageView
                    android:contentDescription="@string/share"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_share"
                    android:id="@+id/shareButton"
                    android:layout_gravity="right|center_vertical"
                    android:tint="#ffffff"
                    android:onClick="_share_onClick"/>


            </LinearLayout>

        </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/clear_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/_deselect"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:onClick="_deselect_onClick" />

            <ImageView
                android:contentDescription="@string/trash"
                android:layout_width="wrap_content"
                app:srcCompat="@drawable/ic_trash"
                android:id="@+id/_trash"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:onClick="_delete_onClick"
                android:tint="#FFFFFF" />

            <Button
                android:text="@string/remove_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/_delete"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:saveEnabled="false"
                android:enabled="false"
                android:onClick="_delete_onClick" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/_listItemView"
            android:footerDividersEnabled="false"/>


    </LinearLayout>

    <include layout="@layout/fab"/>

</android.support.design.widget.CoordinatorLayout>




